--- a/AW1-Luk/index.html
+++ b/AW1-Luk/index.html
@@ -10,8 +10,8 @@
     <header>
         <nav>
             <ul>
-                <li><a href="about.html">Sobre</a></li>
-                <li><a href="contact.html">Contato</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
         <!-- Adicionado botão para mudar tema -->
