--- a/AW1-Luk/index.html
+++ b/AW1-Luk/index.html
@@ -39,7 +39,7 @@
         <img src="Erick.png" alt="Erick">
         <div class="carousel-caption">
           <h2>Erick Veríssimo</h2>
-          <p>Rolou muito o Feed do Facebook e entrou em outra dimenção?</p>
+          <p>Rolou muito o Feed do Facebook e entrou em outra dimensão?</p>
         </div>
       </div>
     </div>
