--- a/AW1-Luk/sobre.html
+++ b/AW1-Luk/sobre.html
@@ -37,16 +37,40 @@
     li {
       margin-bottom: 10px;
     }
+    nav {
+      background-color: #333;
+      color: #fff;
+      padding: 10px;
+      text-align: center;
+    }
+    nav ul {
+      display: flex;
+      justify-content: space-between;
+    }
+    nav li {
+      margin-right: 20px;
+    }
+    nav a {
+      color: #fff;
+      text-decoration: none;
+    }
   </style>
 </head>
 <body>
+  <nav>
+    <ul>
+      <li><a href="index.html">Início</a></li>
+      <li><a href="sobre.html">Sobre</a></li>
+      <li><a href="contato.html">Contato</a></li>
+    </ul>
+  </nav>
   <main>
-    <h1>Sobre nós</h1>
-    <p>Olá o grupo que realizou esse trabalho : Guilherme Malieni , Guilherme Henrique e Rafael Monteiro</p>
+    <h1>Sobre</h1>
+    <p>Esse trabalho foi feito por: Guilherme Henrique, Guilherme Malieni, Rafael Monteiro</p>
     <aside>
-      <h2>Atenção!!!</h2>
+      <h2>Informações sobre a página</h2>
       <ul>
-        <li>Esse Trabalho é para entreterimento :)  </li>
+       <p><b>MINISTÉRIO DO CANCELACMENTO ADVERTE: </b>Este trabalho é somente um material didático para fins DIDÁTICOS</p>
       </ul>
     </aside>
   </main>
