--- a/AW1-Luk/contato.html
+++ b/AW1-Luk/contato.html
@@ -11,10 +11,28 @@
       color: #333;
       margin: 0;
       padding: 0;
+    }
+    nav {
+      background-color: #333;
+      padding: 10px;
+      text-align: center;
+    }
+    nav ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
       display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
+      justify-content: space-between;
+    }
+    nav li {
+      margin-right: 20px;
+    }
+    nav a {
+      color: #fff;
+      text-decoration: none;
+    }
+    nav a:hover {
+      color: #ccc;
     }
     main {
       max-width: 400px;
@@ -23,6 +41,7 @@
       box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
       border-radius: 4px;
       text-align: center;
+      margin: 20px auto;
     }
     h1 {
       font-size: 24px;
@@ -43,6 +62,13 @@
   </style>
 </head>
 <body>
+  <nav>
+    <ul>
+      <li><a href="index.html">Início</a></li>
+      <li><a href="sobre.html">Sobre</a></li>
+      <li><a href="#">Contato</a></li>
+    </ul>
+  </nav>
   <main>
     <h1>Contato</h1>
     <p>Entre em contato conosco!</p>
